--- a/backend/kubernetes-deployment.yaml
+++ b/backend/kubernetes-deployment.yaml
@@ -14,7 +14,13 @@ spec:
     spec:
       containers:
       - name: backend
-        image: myregistry.azurecr.io/myapp-backend:latest
+        image: devaksjenkinsacr/myapp-backend:latest
+        env:
+        - name: REGISTRY_URL
+          valueFrom:
+            secretKeyRef:
+              name: registry-secret
+              key: registry-url
         ports:
         - containerPort: 8080
 ---
