--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-      "express": "^4.17.1"},
+      "express": "^4.17.1",
+      "mongodb": "^3.6.3"
+    },
     "author": "nw",
     "license": "ISC"
   }
