--- a/frontend/kubernetes-deployment.yaml
+++ b/frontend/kubernetes-deployment.yaml
@@ -41,7 +41,7 @@ data:
     server {
         listen 80;
 
-        location / {
+        location /data {
             proxy_pass http://backend:80;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
