Add config map to deployment

--- a/frontend/kubernetes-deployment.yaml
+++ b/frontend/kubernetes-deployment.yaml
@@ -17,6 +17,14 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: nginx-config
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
+      volumes:
+      - name: nginx-config
+        configMap:
+          name: nginx-config
 ---
 apiVersion: v1
 kind: Service
