--- a/frontend/kubernetes-deployment.yaml
+++ b/frontend/kubernetes-deployment.yaml
@@ -50,7 +50,7 @@ data:
         listen 80;
 
         location /data {
-            proxy_pass http://backend:80/data;
+            proxy_pass http://backend:80;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
